添加邮箱测试  11/1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 #spring.data.elasticsearch.cluster-name=elasticsearch
-spring.data.elasticsearch.cluster-nodes=localhost:9300
+#spring.data.elasticsearch.cluster-nodes=localhost:9300
+
+spring.mail.username=2659277880@qq.com
+spring.mail.password=xvrbhoowbepadjeb
+spring.mail.host=smtp.qq.com
+
+#\u5EFA\u7ACB\u5B89\u5168\u8FDE\u63A5
+spring.mail.properties.mail.smtp.ssl.enable=true 
